--- a/.github/workflows/main_personalization.yml
+++ b/.github/workflows/main_personalization.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: node-app
-        path: /home/runner/work/personalization/personalization/dist/.
+        path: /home/runner/work/personalization/personalization/dist/
 
   deploy:
     runs-on: ubuntu-latest
