--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,14 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
-            ],
+              "src/assets",
+              "src/static"
+            ], 
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/static/css/az_product.css",
+              "src/static/css/slider.css"
+
             ],
             "scripts": [],
             "vendorChunk": true,
