--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@microsoft/signalr": "latest",
     "angular-in-memory-web-api": "~0.11.0",
     "jquery": "^3.6.0",
-    "ngx-owl-carousel-o": "^6.0.0",
+    "ngx-owl-carousel-o": "^6.0.2",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -32,13 +33,13 @@
     "@angular/cli": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
     "@types/jasmine": "~3.6.0",
-    "@types/jquery": "^3.5.6",
-    "@types/node": "^12.11.1",
+    "@types/jquery": "^3.5.13",
+    "@types/node": "^12.20.46",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.7.0",
     "jasmine-marbles": "~0.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
