--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@fingerprintjs/fingerprintjs-pro": "^3.5.6",
     "@microsoft/signalr": "latest",
     "angular-in-memory-web-api": "~0.11.0",
     "jquery": "^3.6.0",
+    "ngx-device-detector": "^3.0.0",
     "ngx-owl-carousel-o": "^6.0.2",
     "rxjs": "~6.6.0",
     "ts-md5": "^1.2.11",
