removed native code and used library

--- a/package.json
+++ b/package.json
@@ -20,32 +20,31 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
-    "@fingerprintjs/fingerprintjs-pro": "^3.5.6",
-    "@microsoft/signalr": "latest",
+    "@microsoft/signalr": "^6.0.4",
+    "activity-insight": "file:../user-activity-insight/activity-insight-1.0.0.tgz",
     "angular-in-memory-web-api": "~0.11.0",
     "jquery": "^3.6.0",
-    "ngx-device-detector": "^3.0.0",
     "ngx-owl-carousel-o": "^6.0.2",
     "rxjs": "~6.6.0",
     "ts-md5": "^1.2.11",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.0",
     "@angular/cli": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
     "@types/jasmine": "~3.6.0",
-    "@types/jquery": "^3.5.13",
-    "@types/node": "^12.20.46",
+    "@types/jquery": "^3.5.14",
+    "@types/node": "^12.20.48",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.7.0",
     "jasmine-marbles": "~0.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "^6.3.18",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
